# AOM

./: .gitignore  dsg836_lan_control.ipynb  exp_aom_1.py  file_utils.py  fitters.py  pyproject.toml  test_instruments_lan.ipynb
experiments/: APD.py  Batch.py  Confocal.py  ExpThread.py  OCT.py  PicoHarp.py  SatCurve.py  Spectrometer.py  Sweep.py  TaskHandler.py  Terminal.py  Tracker.py  __init__.py
gui/: ConfocalBrowser.py  MATBrowser.py  OCT.py  OCT.ui  OCT_gui.py  OCTdraft.ui  ScopePanel.py  UHV_LakeShore.py  UHV_LakeShore_gui.py  UHV_System.py  UHV_System_gui.py  UHV_heat3.py  UHV_heat3_gui.py  UHV_xr40b.py  UHV_xr40b_gui.py  confocal_browser.py  flim_gui.py  flim_gui.ui  flim_main.py  icon_rc.py  mainexp.py  mainexp.ui  mainexp_gui.py  mainexp_widgets.py  mat_browser.py  widget_batch.py  widget_batch.ui  widget_calculator.py  widget_histogram.py  widget_liveapd.py  widget_picoharp.py  widget_satcurve.py  widget_seqapd.py  widget_shortcuts.py  widget_terminal.py  widget_tracker.py
instruments/: DAQmxChannel.py  GPIBdev_gui.py  IMAQ.py  Oscilloscope.py  PulseMaster.py  QuTAG_MC.py  Rigol.py  RohdeSchwarz.py  Thorlabs.py  __init__.py  instr_widget.py  princetoninstruments.py
lifetime_functions/: LUT.csv  basic_functions.py  testscript_yok.py
pb_functions/: 001_BasicFunctions.py  100_DynamicalDecoupling.py  101_DynamicalDecoupling_AWG.py  202_DuttProtocol.py  300_ChargeStateReadout.py  500_PLE.py
webcam_processing/: Draft_GUI.py  Draft_GUI.ui  webcam_GUI.py
