[project]
name = "quantum-microscopy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6",
    "numpy==1.26.4",
    "scipy",
    "matplotlib",
    "pyqtgraph",
    "opencv-python",
    "imutils",
    "click",
    "cv2-enumerate-cameras",
    "pandas",
    "pytz",
    "PyYAML",
    "nidaqmx",
    "pydaqmx>=1.4.7",
    "qdarkstyle>=3.2.3",
    "pyvisa>=1.16.2",
    "simplejson>=4.1.1",
    "plotly>=5.0",
    "PyQt6-WebEngine>=6.4",
]

[project.optional-dependencies]
windows = [
    "pythonnet",  # Thorlabs Kinesis piezo control via .NET/CLR (Windows only)
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
